backend/startup_error.txt
node.exe : C:\Users\AA\.gemin
i\antigravity\scratch\sesa-me
rn-app\backend\src\routes\cou
rses.ts:1
At C:\Program 
Files\nodejs\npx.ps1:29 
char:3
+   & $NODE_EXE $NPX_CLI_JS 
$args
+   
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo           
   : NotSpecified: (C:\User  
  s\AA\.ge...es\courses.ts   
 :1:String) [], RemoteExc    
eption
    + FullyQualifiedErrorId  
   : NativeCommandError
 
import express, { Response } 
from 'express';
                  ^

SyntaxError: The requested 
module 'express' does not 
provide an export named 
'Response'
    at 
ModuleJob._instantiate (node:
internal/modules/esm/module_j
ob:220:21)
    at async ModuleJob.run (n
ode:internal/modules/esm/modu
le_job:321:5)
    at async onImport.tracePr
omise.__proto__ (node:interna
l/modules/esm/loader:644:26)
    at async asyncRunEntryPoi
ntWithESMLoader (node:interna
l/modules/run_main:117:5)

Node.js v22.17.0
